--- a/public/css/dashboard/dashboard.css
+++ b/public/css/dashboard/dashboard.css
@@ -18,6 +18,10 @@ td {
   vertical-align: middle !important;
 }
 
+.nav.nav-pills a {
+  cursor: pointer;
+}
+
 .user_profile .profile_image {
   width: 40px;
   cursor: pointer;
