changes to comment and event serializer

--- a/public/css/events/index.scss
+++ b/public/css/events/index.scss
@@ -133,3 +133,11 @@ body {
     width: 60%;
   }
 }
+.eventInfoTitle{
+  font-size: 40px;
+  font-weight: bolder;
+}
+a {
+  color:inherit;
+  text-decoration: none;
+ }
