--- a/public/css/events/index.css
+++ b/public/css/events/index.css
@@ -158,3 +158,13 @@ body {
     width: 60%;
   }
 }
+
+.eventInfoTitle {
+  font-size: 40px;
+  font-weight: bolder;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
+}
