fixes map reloading whenever any part of page updates.

--- a/public/css/events/show.scss
+++ b/public/css/events/show.scss
@@ -118,4 +118,12 @@
   display: inline-block;
   float: right;
   margin: 3px 0 0 0;
+  color:grey;
+}
+
+.commentFlag{
+  display: inline-block;
+  height: 12px;
+  float: right;
+  margin: 3px 0 0 0;
 }
