--- a/public/css/events/show.css
+++ b/public/css/events/show.css
@@ -134,4 +134,12 @@
   display: inline-block;
   float: right;
   margin: 3px 0 0 0;
+  color: grey;
+}
+
+.commentFlag {
+  display: inline-block;
+  height: 12px;
+  float: right;
+  margin: 3px 0 0 0;
 }
