--- a/public/css/events/index.scss
+++ b/public/css/events/index.scss
@@ -35,6 +35,14 @@ body {
   margin: 5px 10px;
   width: 50%;
 }
+.eventInfoTitle{
+  font-size: 40px;
+  font-weight: bolder;
+}
+a {
+  color:inherit;
+  text-decoration: none;
+ }
 .eventContainer {
   display: flex;
   height: 250px;
@@ -105,6 +113,10 @@ body {
       flex: 3;
       .event_title {
         margin: 10px 0;
+        white-space: nowrap;
+        text-overflow: ellipsis;
+        overflow: hidden;
+        width: 180px;
       }
       .event_guests {
         display: inline-block;
@@ -112,6 +124,17 @@ body {
       .event_spots_left {
         display: inline-block;
         margin-left: 5px;
+      }
+    }
+  }
+}
+@media screen and (min-width: 500px) {
+  .eventContainer {
+    .descContainer {
+      .eventDescContainer {
+        .event_title {
+          width: 280px;
+        }
       }
     }
   }
@@ -132,12 +155,27 @@ body {
     position: fixed;
     width: 60%;
   }
+  .eventContainer {
+    .descContainer {
+      .eventDescContainer {
+        .event_title {
+          width: 230px;
+        }
+      }
+    }
+  }
 }
-.eventInfoTitle{
-  font-size: 40px;
-  font-weight: bolder;
+@media screen and (min-width: 992px) {
+  .eventContainer {
+    .descContainer {
+      .eventDescContainer {
+        .event_title {
+          width: 180px;
+        }
+        .event_guests, .event_spots_left {
+          font-size: 13px;
+        }
+      }
+    }
+  }
 }
-a {
-  color:inherit;
-  text-decoration: none;
- }
