fixed welcome page responsive issues

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -9,7 +9,7 @@
       <div class="searchContainer">
         <div class="cityContainer">
           <div class="form-group">
-            <input type="text" class="form-control" id="location" name="location" placeholder="What Do You Want To Search" required />
+            <input type="text" class="form-control" id="location" name="location" placeholder="Where Do You Want To Search" required />
           </div>
         </div>
         <div class="dateFrom">
@@ -22,7 +22,7 @@
             <input type="text" class="form-control flatpickr" data-date-format="m-d-Y" id="index_date_to" name="ending_date" placeholder="To" required />
           </div>
         </div>
-        <div class="buttonContainer">
+        <div class="buttonContainer center-block">
           <button type="button" class="btn" id="submitIndexSearch">Search</button>
         </div>
       </div>
@@ -36,21 +36,21 @@
     </div>
   </div>
   <div class="row">
-    <div class="col-xs-12 col-sm-4 text-center">
+    <div class="col-xs-12 col-sm-4 salt_info text-center">
       <i class="fa fa-search info_img" aria-hidden="true"></i>
       <h3>Search Events</h3>
       <div class="info_text">
         Check out local events being hosted by people just like you!
       </div>
     </div>
-    <div class="col-xs-12 col-sm-4 text-center">
+    <div class="col-xs-12 col-sm-4 salt_info text-center">
       <i class="fa fa-pencil-square-o info_img" aria-hidden="true"></i>
       <h3>Apply</h3>
       <div class="info_text">
          Request a seat at an event and get speedy approval.
       </div>
     </div>
-    <div class="col-xs-12 col-sm-4 text-center">
+    <div class="col-xs-12 col-sm-4 salt_info text-center">
       <i class="fa fa-glass info_img" aria-hidden="true"></i>
       <h3>Bon Appétit</h3>
       <div class="info_text">
