--- a/public/css/welcome/index.css
+++ b/public/css/welcome/index.css
@@ -6,9 +6,9 @@
 }
 
 .searchContainer {
-  margin-top: 130px;
+  margin-top: 80px;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
 }
 
 .searchContainer .form-control {
@@ -46,8 +46,12 @@
 }
 
 .info_container {
-  padding: 0 120px;
+  padding: 0 60px;
   margin-bottom: 50px;
+}
+
+.salt_info {
+  margin-bottom: 20px;
 }
 
 .info_img {
@@ -57,4 +61,28 @@
 .info_text {
   padding: 0 40px;
   font-size: 16px;
+}
+
+@media screen and (min-width: 500px) {
+  .searchContainer {
+    margin-top: 130px;
+    display: flex;
+    flex-direction: row;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .salt_info {
+    margin-bottom: 0px;
+  }
+  .info_text {
+    padding: 0;
+    font-size: 16px;
+  }
+}
+
+@media screen and (min-width: 992px) {
+  .info_text {
+    padding: 0 40px;
+  }
 }
