--- a/public/css/events/show.css
+++ b/public/css/events/show.css
@@ -141,5 +141,6 @@
   display: inline-block;
   height: 12px;
   float: right;
-  margin: 3px 0 0 0;
+  margin: 3px 0 0 15px;
+  cursor: pointer;
 }
