fixed issues with merge

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,7 +36,7 @@
               </nav>
               <div class="header_profile">
                 <a href="/current_user/dashboard" alt="Profile Image">
-                   <% if current_user  %>
+                   <% if current_user&.images&.first  %>
                     <%= image_tag(attachment_url(current_user.images.first, :file, :fill, 300, 300), :class => "img-circle header_profile_image")%>
                   <% else %>
                    <%= image_tag('http://unstats.un.org/unsd/trade/events/2015/abudhabi/img/no-pic.png', :class => "img-circle header_profile_image") %>
