--- a/public/css/dashboard/dashboard.scss
+++ b/public/css/dashboard/dashboard.scss
@@ -31,8 +31,12 @@ td {
     cursor: pointer;
   }
 }
+.accept_application {
+  cursor: pointer;
+}
 .deny_application {
   margin-left: 10px;
+  cursor: pointer;
 }
 
 .text_input {
