hard coded routes for dashboard, flagging comments now works

--- a/public/css/events/show.scss
+++ b/public/css/events/show.scss
@@ -118,7 +118,7 @@
   display: inline-block;
   float: right;
   margin: 3px 0 0 0;
-  color:grey;
+  color:gray;
 }
 
 .commentFlag{
@@ -126,5 +126,5 @@
   height: 12px;
   float: right;
   margin: 3px 0 0 15px;
-  cursor:pointer;
+  cursor:pointerx;
 }
