--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,20 +19,38 @@
     <header>
       <div class="container-fluid">
         <div class="row">
-          <div class="col-xs-3 col-sm-6">
+          <div class="col-xs-2 col-sm-2">
             <div class="header_img">
               <a href="/"><img src="/assets/whitesalticon.png" alt="salt"></a>
             </div>
           </div>
-          <div class="col-xs-9 col-sm-6">
+          <% if current_user %>
+          <div class="col-xs-7 col-sm-7">
+          <% else %>
+          <div class="col-xs-7 col-sm-6">
+          <% end %>
+            <form method="get" action="#" enctype="multipart/form-data">
+              <div class="navSearchContainer">
+                <div class="cityContainer col-xs-12">
+                  <div class="form-group">
+                    <input type="text" class="form-control" id="navSearchLocation" name="navLocation" placeholder="Where Do You Want To Search?" required />
+                  </div>
+                </div>
+              </div>
+            </form>
+          </div>
+          <% if current_user %>
+          <div class="col-xs-3 col-sm-3">
             <div class="header_links">
               <nav class="nav_effect">
-                <a href="#" data-toggle="modal" data-target="#sign_up">Sign Up</a>
-                <% if current_user %>
-                  <%= link_to "Logout", logout_path, method: 'delete' %>
-                <% else %>
-                  <a href="#" data-toggle="modal" data-target="#login">Login</a>
-                <% end %>
+            <%= link_to "Logout", logout_path, method: 'delete' %>
+          <% else %>
+          <div class="col-xs-3 col-sm-4">
+            <div class="header_links">
+              <nav class="nav_effect">
+            <a href="#" data-toggle="modal" data-target="#sign_up">Sign Up</a>
+            <a href="#" data-toggle="modal" data-target="#login">Login</a>
+          <% end %>
               </nav>
               <div class="header_profile">
                 <a href="/current_user/dashboard" alt="Profile Image">
@@ -152,6 +170,7 @@
     <script src="/js/config.js"></script>
     <script src="/js/handleerrors.js"></script>
     <script src="/js/signUpLogin.js"></script>
+    <script src="/js/header/search.js"></script>
     <%= yield :scripts %>
   </body>
 </html>
