--- a/public/css/events/show.css
+++ b/public/css/events/show.css
@@ -134,7 +134,7 @@
   display: inline-block;
   float: right;
   margin: 3px 0 0 0;
-  color: grey;
+  color: gray;
 }
 
 .commentFlag {
@@ -142,5 +142,5 @@
   height: 12px;
   float: right;
   margin: 3px 0 0 15px;
-  cursor: pointer;
+  cursor: pointerx;
 }
