--- a/app/views/users/dashboard.html.erb
+++ b/app/views/users/dashboard.html.erb
@@ -32,8 +32,8 @@
             <input type="text" class="form-control" value="<%= @user.email %>" id="email" name="email"  />
           </div>
           <div class="form-group">
-            <label for="date_of_birth">Date Of Birth <span class="text-muted">(DD-MM-YYYY)</span></label>
-            <input type="text" class="form-control" value="<%= @user.date_of_birth.strftime('%e-%m-%Y') %>" id="date_of_birth" name="date_of_birth"  />
+            <label for="date_of_birth">Date Of Birth <span class="text-muted">(MM/DD/YYYY)</span></label>
+            <input type="text" class="form-control" value="<%= @user.date_of_birth.strftime('%m/%d/%Y') %>" id="date_of_birth" name="date_of_birth"  />
           </div>
           <div class="form-group">
             <label for="images_files_profile">Profile Image</label>
