--- a/public/css/header.css
+++ b/public/css/header.css
@@ -18,7 +18,7 @@ nav a {
   color: #fff;
   text-transform: uppercase;
   letter-spacing: 1px;
-  text-shadow: 0 0 1px rgba(255, 255, 255, 0.3);
+  text-shadow: 1px 1px 1px black;
   font-size: 14px;
 }
 
@@ -67,6 +67,138 @@ nav a {
   transform: translateY(0px);
 }
 
+.navSearchContainer {
+  display: flex;
+  flex-direction: row;
+  margin-top: 24px;
+}
+
+.navSearchContainer input {
+  width: 100%;
+}
+
+.navSearchContainer .form-group {
+  margin-bottom: 0;
+}
+
+.navSearchContainer .form-control {
+  border-radius: 0;
+}
+
+.navSearchContainer .navCityContainer {
+  flex: 4;
+}
+
+.navSearchContainer .navDateFrom {
+  flex: 1;
+}
+
+.navSearchContainer .navDateTo {
+  flex: 1;
+}
+
+.navSearchContainer .navButtonContainer {
+  display: flex;
+  align-items: center;
+  flex: 0.5;
+  cursor: pointer;
+}
+
+.navSearchContainer .navButtonContainer #navSubmitSearch {
+  border-top-left-radius: 0;
+  border-bottom-left-radius: 0;
+}
+
+.navSearchContainer .navButtonContainer .navSearchIcon {
+  font-size: 18px;
+  color: white;
+}
+
+.hiddenError {
+  visibility: hidden;
+}
+
+.error {
+  color: red;
+  position: relative;
+  z-index: 10;
+}
+
+.navBarMobile {
+  position: fixed;
+  z-index: 5;
+  top: 80px;
+  margin-right: 12px;
+  width: 92%;
+}
+
+.navMobileSearchIcon {
+  font-size: 24px;
+  margin-top: 25px;
+  left: 116px;
+  position: absolute;
+  z-index: 8;
+}
+
+.navMobileSearchIcon a {
+  color: white;
+  cursor: pointer;
+}
+
+.navMobileSearchIcon a:hover {
+  color: white;
+}
+
+.anchorClicked {
+  color: gray;
+}
+
+.navMobileSearchContainer {
+  display: flex;
+  flex-direction: row;
+}
+
+.navMobileSearchContainer input {
+  width: 100%;
+}
+
+.navMobileSearchContainer .form-group {
+  margin-bottom: 0;
+}
+
+.navMobileSearchContainer .form-control {
+  border-radius: 0;
+}
+
+.navMobileSearchContainer .navMobileCityContainer {
+  flex: 4;
+}
+
+.navMobileSearchContainer .navMobileDateFrom {
+  flex: 2;
+}
+
+.navMobileSearchContainer .navMobileDateTo {
+  flex: 2;
+}
+
+.navMobileSearchContainer .navMobileButtonContainer {
+  display: flex;
+  align-items: center;
+  flex: 0.1;
+  cursor: pointer;
+}
+
+.navMobileSearchContainer .navMobileButtonContainer #navMobileSubmitSearch {
+  border-top-left-radius: 0;
+  border-bottom-left-radius: 0;
+}
+
+.hideSearch {
+  visibility: hidden;
+  transition: 0.3s;
+}
+
 .margin-top {
   padding-top: 80px;
 }
@@ -80,7 +212,10 @@ header {
 }
 
 .header_img {
-  margin-top: 5px;
+  margin-top: 2px;
+  display: inline-block;
+  float: left;
+  margin-right: 10px;
 }
 
 .header_img img {
@@ -122,34 +257,4 @@ header {
     width: 60px;
     margin: 0px 8px 5px 14px;
   }
-}
-
-.navSearchContainer {
-  margin-top: 25px;
-  display: flex;
-  flex-direction: row;
-}
-
-.searchImageContainer {
-  margin-right: -20px;
-}
-
-#navSearchImage {
-  height: 25px;
-  margin-top: 4px;
-  cursor: pointer;
-}
-
-#navSearchLocation {
-  width: 100%;
-  display: block;
-  height: 34px;
-  padding: 6px 12px;
-  font-size: 14px;
-  line-height: 1.42857143;
-  color: #555;
-  background-color: #fff;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  margin: 0;
 }
