--- a/public/css/dashboard/dashboard.css
+++ b/public/css/dashboard/dashboard.css
@@ -14,6 +14,15 @@ body {
   display: inline-block;
 }
 
+.scroll_box {
+  padding: 10px;
+  border: 1px solid transparent;
+  border-radius: 5px;
+  background-color: black;
+  overflow-y: scroll;
+  height: 400px;
+}
+
 td {
   vertical-align: middle !important;
 }
