--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,47 +19,95 @@
     <header>
       <div class="container-fluid">
         <div class="row">
-          <div class="col-xs-2 col-sm-2">
+          <div class="col-xs-6 col-sm-8">
             <div class="header_img">
               <a href="/"><img src="/assets/whitesalticon.png" alt="salt"></a>
             </div>
-          </div>
-          <% if current_user %>
-          <div class="col-xs-7 col-sm-7">
-          <% else %>
-          <div class="col-xs-7 col-sm-6">
-          <% end %>
-            <form method="get" action="#" enctype="multipart/form-data">
-              <div class="navSearchContainer">
-                <div class="cityContainer col-xs-12">
-                  <div class="form-group">
-                    <input type="text" class="form-control" id="navSearchLocation" name="navLocation" placeholder="Where Do You Want To Search?" required />
-                  </div>
+            <div class="homePageHidden">
+                <div class="hidden-xs visible-sm visible-md visible-lg">
+                  <form method="get" action="#" enctype="multipart/form-data">
+                    <div class="navSearchContainer">
+                      <div class="navCityContainer">
+                        <div class="form-group">
+                          <input type="text" class="form-control" id="navLocation" name="navLocation" placeholder="Where Do You Want To Search?" required />
+                        </div>
+                      </div>
+                      <div class="navDateFrom">
+                        <div class="form-group">
+                          <input type="text" class="form-control flatpickr" data-date-format="m-d-Y" id="nav_starting_date" name="nav_starting_date" placeholder="From" required />
+                        </div>
+                      </div>
+                      <div class="navDateTo">
+                        <div class="form-group">
+                          <input type="text" class="form-control flatpickr" data-date-format="m-d-Y" id="nav_ending_date" name="nav_ending_date" placeholder="To" required />
+                        </div>
+                      </div>
+                      <div class="navButtonContainer center-block">
+                        <button type="button" class="btn" id="navSubmitSearch"><i class="fa fa-search navSearchIcon" aria-hidden="true"></i></button>
+                      </div>
+                    </div>
+                    <div id="error" class="hiddenError error">
+                      All Fields Need Values
+                    </div>
+                  </form>
                 </div>
               </div>
-            </form>
-          </div>
-          <% if current_user %>
-          <div class="col-xs-3 col-sm-3">
-            <div class="header_links">
-              <nav class="nav_effect">
-            <%= link_to "Logout", logout_path, method: 'delete' %>
-          <% else %>
-          <div class="col-xs-3 col-sm-4">
-            <div class="header_links">
-              <nav class="nav_effect">
-            <a href="#" data-toggle="modal" data-target="#sign_up">Sign Up</a>
-            <a href="#" data-toggle="modal" data-target="#login">Login</a>
-          <% end %>
-              </nav>
-              <div class="header_profile">
-                <a href="/current_user/dashboard" alt="Profile Image">
-                   <% if current_user&.images&.first  %>
-                    <%= image_tag(attachment_url(current_user.images.first, :file, :fill, 300, 300), :class => "img-circle header_profile_image")%>
-                  <% else %>
-                   <%= image_tag('http://unstats.un.org/unsd/trade/events/2015/abudhabi/img/no-pic.png', :class => "img-circle header_profile_image") %>
-                  <% end %>
-                </a>
+              <div class="navMobileSearchIcon visible-xs hidden-sm ">
+                <a href="#" id="hiddenNavAnchor"><i class="fa fa-search" id="searchGlass" aria-hidden="true"></i></a>
+              </div>
+              <div class="visible-xs hidden-sm navBarMobile">
+                  <div id="hiddenNav" class="hideSearch">
+                      <form method="get" action="#" enctype="multipart/form-data">
+                        <div class="navMobileSearchContainer">
+                          <div class="navMobileCityContainer">
+                            <div class="form-group">
+                              <input type="text" class="form-control" id="nav_mobile_Location" name="navLocation" placeholder="Where?" required />
+                            </div>
+                          </div>
+                          <div class="navMobileDateFrom">
+                            <div class="form-group">
+                              <input type="text" class="form-control flatpickr" data-date-format="m-d-Y" id="nav_mobile_starting_date" name="nav_starting_date" placeholder="From" required />
+                            </div>
+                          </div>
+                          <div class="navMobileDateTo">
+                            <div class="form-group">
+                              <input type="text" class="form-control flatpickr" data-date-format="m-d-Y" id="nav_mobile_ending_date" name="nav_ending_date" placeholder="To" required />
+                            </div>
+                          </div>
+                          <div class="navMobileButtonContainer center-block">
+                            <button type="button" class="btn" id="navMobileSubmitSearch"><i class="fa fa-search navSearchIcon" aria-hidden="true"></i></button>
+                          </div>
+                        </div>
+                        <div id="mobileError" class="hiddenError error">
+                          All Fields Need Values
+                        </div>
+                      </form>
+                    </div>
+                </div>
+              </div>
+              <% if current_user %>
+              <div class="col-xs-6 col-sm-4">
+                <div class="header_links">
+                  <nav class="nav_effect">
+                <%= link_to "Logout", logout_path, method: 'delete' %>
+              <% else %>
+              <div class="col-xs-6 col-sm-4">
+                <div class="header_links">
+                  <nav class="nav_effect">
+                    <a href="#" data-toggle="modal" data-target="#sign_up">Sign Up</a>
+                    <a href="#" data-toggle="modal" data-target="#login">Login</a>
+              <% end %>
+                  </nav>
+                  <div class="header_profile">
+                    <a href="/current_user/dashboard" alt="Profile Image">
+                       <% if current_user&.images&.first  %>
+                        <%= image_tag(attachment_url(current_user.images.first, :file, :fill, 300, 300), :class => "img-circle header_profile_image")%>
+                      <% else %>
+                       <%= image_tag('http://unstats.un.org/unsd/trade/events/2015/abudhabi/img/no-pic.png', :class => "img-circle header_profile_image") %>
+                      <% end %>
+                    </a>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
@@ -168,6 +216,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     <script src="/js/config.js"></script>
+    <script src="/js/flatpickr.min.js"></script>
     <script src="/js/handleerrors.js"></script>
     <script src="/js/signUpLogin.js"></script>
     <script src="/js/header/search.js"></script>
