--- a/public/css/dashboard/dashboard.scss
+++ b/public/css/dashboard/dashboard.scss
@@ -16,7 +16,7 @@ body {
   padding: 10px;
   border: 1px solid transparent;
   border-radius: 5px;
-  background-color: black;
+  background-color: white;
   overflow-y: scroll;
   height: 400px;
 }
