--- a/public/css/events/index.css
+++ b/public/css/events/index.css
@@ -52,6 +52,7 @@ a {
 }
 
 .eventContainer {
+  border-radius: 10px;
   display: flex;
   height: 250px;
   flex-direction: column;
@@ -66,6 +67,7 @@ a {
 }
 
 .eventContainer .imgContainer .dateContainer {
+  border-top-left-radius: 10px;
   position: absolute;
   top: 0px;
   left: 15px;
@@ -96,6 +98,8 @@ a {
 }
 
 .eventContainer .descContainer {
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
   flex: 1;
   display: flex;
   flex-direction: row;
