--- a/public/css/events/index.scss
+++ b/public/css/events/index.scss
@@ -43,6 +43,7 @@ a {
   text-decoration: none;
  }
 .eventContainer {
+  border-radius: 10px;
   display: flex;
   height: 250px;
   flex-direction: column;
@@ -53,6 +54,7 @@ a {
   .imgContainer {
     flex: 2;
     .dateContainer {
+      border-top-left-radius: 10px;
       position: absolute;
       top: 0px;
       left: 15px;
@@ -79,6 +81,8 @@ a {
     }
   }
   .descContainer {
+    border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
     flex: 1;
     display: flex;
     flex-direction: row;
