--- a/public/css/welcome/index.scss
+++ b/public/css/welcome/index.scss
@@ -37,29 +37,50 @@ header {
   }
   .cityContainer {
     flex: 4;
+    height: 34px;
     input {
       border-top: 2px solid black;
       border-bottom: 2px solid black;
       border-left: 2px solid black;
       border-right: 0;
+      border-top-left-radius: 5px;
+      border-bottom-left-radius: 5px;
     }
   }
   .dateFrom {
     flex: 2;
+    height: 34px;
     input {
       border-top: 2px solid black;
       border-bottom: 2px solid black;
       border-right: 0;
       border-left: 0;
+      text-align: center;
+    }
+  }
+  .indexArrowContainer {
+    flex: 0.5;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 34px;
+    border-top: 2px solid black;
+    border-bottom: 2px solid black;
+    background-color: white;
+    i {
+      font-size: 30px;
+      color: #555;
     }
   }
   .dateTo {
     flex: 2;
+    height: 34px;
     input {
       border-top: 2px solid black;
       border-bottom: 2px solid black;
       border-right: 0;
       border-left: 0;
+      text-align: center;
     }
   }
   button {
@@ -70,6 +91,7 @@ header {
   }
   .buttonContainer {
     flex: 1;
+    height: 34px;
     button {
       background-color: black;
       color: white;
