fixed error message

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -29,9 +29,7 @@
           <button type="button" class="btn" id="submitIndexSearch">Search</button>
         </div>
       </div>
-      <div id="searchError" class="hiddenError error">
-        All Fields Need Values
-      </div>
+      <span id="searchError" class="hiddenError errorIndex">All Fields Need Values</span>
     </form>
   </div>
 </div>
