--- a/public/css/header.scss
+++ b/public/css/header.scss
@@ -130,6 +130,8 @@ nav a {
   color: red;
   position: relative;
   z-index: 10;
+  text-shadow: 1px 1px 1px black;
+  font-size: 18px;
   margin-left: 12px;
 }
 .navBarMobile {
