--- a/public/css/events/show.scss
+++ b/public/css/events/show.scss
@@ -98,6 +98,21 @@
   margin: 0;
 }
 
+.eventInfoTitle {
+  font-size: 18px;
+  a {
+    color: black;
+    text-decoration: none;
+  }
+}
+.commentsScrollBox {
+  margin-top: 20px;
+  padding: 10px;
+  border: 1px solid black;
+  border-radius: 5px;
+  height: 400px;
+  overflow: scroll;
+}
 .commentTitle {
   font-weight: bolder;
 }
